# results_elections

./: Makefile  README.md  main.py  pyproject.toml  results_autarquicas_2021_af.xlsx  results_autarquicas_2021_am.xlsx  results_autarquicas_2021_cm.xlsx  results_europeias_2019.xlsx  results_legislativas_2019.xlsx  results_presidenciais_2021.xlsx
