[tool.poetry]
name = "elections_results"
version = "0.1.0"
description = "Extract results from Portuguese elections"
authors = ["Luis Silva <luisiul359@gmail.com>"]
#packages = [ { include = "" } ]

[tool.poetry.dependencies]
python = ">=3.6.5"
requests = "~2.25.1"
pandas = "~1.1.5"
ipykernel = "~5.5.6"
tqdm = "~4.62.3"
openpyxl = "~3.0.9"
six = "~1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
